--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Food Recipes and cooking tutorials" />
-    <link href="../assets/output.css" rel="stylesheet" />
+    <link href="./assets/output.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" href="../assets/index.css" />
+    <link rel="stylesheet" href="./assets/index.css" />
     <link
       rel="icon"
       href="https://png.pngtree.com/png-vector/20220706/ourmid/pngtree-food-logo-png-image_5687717.png"
@@ -152,7 +152,7 @@
       </div>
     </main>
 
-    <script src="../js/categories.js"></script>
+    <script src="./js/categories.js"></script>
   </body>
 
   <footer>
