--- a/src/pages/meal-detail.html
+++ b/src/pages/meal-detail.html
@@ -26,11 +26,11 @@
       <div
         class="w-full fixed flex flex-row justify-between items-center px-5 sm:px-20 h-20 border-b-2 bg-white z-20"
       >
-        <a href="index.html"
+        <a href="../index.html"
           ><h1 class="text-2xl font-bold text-amber-900">Mealapp</h1></a
         >
         <ul class="hidden gap-x-6 sm:flex font-semibold text-lg">
-          <li><a href="index.html" class="hover:text-green-500">Home</a></li>
+          <li><a href="../index.html" class="hover:text-green-500">Home</a></li>
           <li><a href="#" class="hover:text-green-500">Foods</a></li>
           <li><a href="#" class="hover:text-green-500">Ingredients</a></li>
           <li><a href="#" class="hover:text-green-500">Local Culinary</a></li>
@@ -91,7 +91,7 @@
               stroke-linejoin="round"
             />
           </svg>
-          <a href="index.html" class="font-semibold hover:text-green-500"
+          <a href="../index.html" class="font-semibold hover:text-green-500"
             >Foods</a
           >
           <svg
