feat: create pagination on meals page and improve their appearance

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
             <div id="loading" class="loader"></div>
             <div id="failed"></div>
             <div
-              class="max-w-5xl grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 items-center justify-center p-5 gap-4 text-center"
+              class="max-w-5xl grid grid-cols-2 sm:grid-cols-4 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 items-center justify-center p-5 gap-4 text-center"
               id="categories"
             ></div>
           </div>
