--- a/src/pages/category-detail.html
+++ b/src/pages/category-detail.html
@@ -44,7 +44,7 @@
               <span></span>
               <span></span>
               <ul id="menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Foods</a></li>
                 <li><a href="#">Ingredients</a></li>
                 <li><a href="#">Local Culinary</a></li>
@@ -114,8 +114,10 @@
         <div class="w-96 flex sm:w-[55rem] py-5">
           <h1 class="text-3xl text-left" id="title-meals"></h1>
         </div>
+
         <div id="loading" class="loader flex"></div>
         <div id="failed"></div>
+
         <div class="container">
           <div class="flex justify-center">
             <div
@@ -124,6 +126,11 @@
             ></div>
           </div>
         </div>
+
+        <div
+          id="pagination-container"
+          class="m-5 flex justify-center space-x-1"
+        ></div>
       </div>
     </main>
 
