--- a/src/pages/meal-detail.html
+++ b/src/pages/meal-detail.html
@@ -44,7 +44,7 @@
               <span></span>
               <span></span>
               <ul id="menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Foods</a></li>
                 <li><a href="#">Ingredients</a></li>
                 <li><a href="#">Local Culinary</a></li>
